# spixels

./: CMakeLists.txt  README.md  package.xml
pSLIC/: Makefile  demo_singleImage.cpp  preemptiveSLIC.cpp  preemptiveSLIC.h
pSLIC/matlab/: mex_helper.cpp  mex_helper.h  mex_preemptiveSLIC.cpp
src/: main.cc  superpixels.cc  superpixels.h
