<package>
  <name>spixels</name>
  <version>0.1.0</version>
  <description>Test package to play with several superpixel features.</description>

  <maintainer email="emilio.garcia@uib.es">Emilio Garcia-Fidalgo</maintainer>
  <author email="emilio.garcia@uib.es">Emilio Garcia-Fidalgo</author>

  <license>GPL</license>
  <url type="website">http://wiki.ros.org/spixels</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <!-- <cpp lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib -lBoVW" cflags="-I${prefix}/lib/include/"/> -->
  </export>
</package>